# TinySubscribeCallback

./: CMakeLists.txt  README.md
include/: DataDispatcher.hpp  Function.hpp  RemoveReference.hpp  TypeJudge.hpp
include/wh_ipc/: Function.hpp  IntraDataDispatcher.hpp  TypeJudge.hpp
src/: test_data_dispatcher.cpp
